# meshql-rs

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
examples/egg-economy/: Cargo.toml  Dockerfile  docker-compose.yml
examples/egg-economy-ksql/: Cargo.toml
examples/egg-economy-ksql/src/: main.rs
examples/egg-economy-ksql/terraform/: .terraform.lock.hcl  aws.tf  confluent.tf  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  tfplan  variables.tf
examples/egg-economy-lambda/: Cargo.toml
examples/egg-economy-lambda/cdk/: cdk.context.json  package-lock.json  package.json  tsconfig.json
examples/egg-economy-lambda/cdk/cdk.out/: EggEconomyLambdaStack.assets.json  EggEconomyLambdaStack.template.json  manifest.json  tree.json
examples/egg-economy-lambda/cdk/cdk.out/asset.0b5f21243dcc2213bfdf5b0948224314ba2914e5b5d571f599ac7cf6697efb4e/: bootstrap
examples/egg-economy-lambda/cdk/cdk.out/asset.8770deb51f60120dd173976bbe4b131cbe66c19c8ffdda4676c239e272b06a6b/: bootstrap
examples/egg-economy-lambda/cdk/lib/: stack.ts
examples/egg-economy-lambda/perf/: k6-test.js
examples/egg-economy-lambda/src/: main.rs
examples/egg-economy-salesforce/: Cargo.toml  Dockerfile  docker-compose.yml
examples/egg-economy-salesforce/src/: main.rs
examples/egg-economy-sap/: Cargo.toml  Dockerfile  docker-compose.yml
examples/egg-economy-sap/src/: main.rs
examples/egg-economy/src/: main.rs
examples/farm/: Cargo.toml
examples/farm-azure/: Cargo.toml  README.md  deploy.sh
examples/farm-azure/azure-functions/: host.json
examples/farm-azure/azure-functions/api/: function.json
examples/farm-azure/config/graph/: coop.graphql  lay_report.graphql
examples/farm-azure/config/json/: coop.schema.json  farm.schema.json
examples/farm-azure/src/: main.rs
examples/farm-azure/terraform/: main.tf  variables.tf
examples/farm/config/graph/: farm.graphql  hen.graphql
examples/farm/config/json/: hen.schema.json  lay_report.schema.json
examples/farm/src/: main.rs
meshql-cert/: Cargo.toml
meshql-cert/src/: lib.rs  world.rs
meshql-cert/src/steps/: farm.rs  mod.rs  repo.rs  searcher.rs
meshql-cert/tests/features/: cross_service.feature  egg_economy.feature  farm.feature  repository.feature  searcher.feature
meshql-core/: Cargo.toml
meshql-core/src/: auth.rs  config.rs  error.rs  lib.rs  testing.rs
meshql-graphlette/: Cargo.toml
meshql-graphlette/src/: lib.rs  schema_builder.rs
meshql-ksql/: Cargo.toml
meshql-ksql/src/: client.rs  config.rs  converters.rs  lib.rs  query.rs  repository.rs  searcher.rs
meshql-ksql/tests/: repo_cert.rs  searcher_cert.rs
meshql-lambda/: Cargo.toml
meshql-lambda/src/: lib.rs
meshql-merkql/: Cargo.toml
meshql-merkql/src/: lib.rs  matcher.rs  repository.rs  searcher.rs
meshql-merkql/tests/: farm_cert.rs  repo_cert.rs  searcher_cert.rs
meshql-merksql/: Cargo.toml
meshql-merksql/src/: convert.rs  lib.rs  matcher.rs  repository.rs  searcher.rs
meshql-merksql/tests/: repo_cert.rs  searcher_cert.rs
meshql-mongo/: Cargo.toml
meshql-mongo/src/: converters.rs  lib.rs  repository.rs  searcher.rs
meshql-mongo/tests/: farm_cert.rs  repo_cert.rs  searcher_cert.rs
meshql-mysql/: Cargo.toml
meshql-mysql/src/: lib.rs  query.rs  repository.rs  searcher.rs
meshql-mysql/tests/: farm_cert.rs  repo_cert.rs  searcher_cert.rs
meshql-postgres/: Cargo.toml
meshql-postgres/src/: lib.rs  query.rs  repository.rs  searcher.rs
meshql-postgres/tests/: farm_cert.rs  repo_cert.rs  searcher_cert.rs
meshql-restlette/: Cargo.toml
meshql-restlette/src/: lib.rs  routes.rs
meshql-server/: Cargo.toml
meshql-server/src/: lib.rs
meshql-sqlite/: Cargo.toml
meshql-sqlite/meshql-sqlite/: Cargo.toml
meshql-sqlite/meshql-sqlite/src/: repository.rs  searcher.rs
meshql-sqlite/meshql-sqlite/tests/: searcher_cert.rs
meshql-sqlite/src/: lib.rs  query.rs  repository.rs  searcher.rs
meshql-sqlite/tests/: cross_service_cert.rs  egg_economy_cert.rs  farm_cert.rs  repo_cert.rs  searcher_cert.rs
performance/: REPORT.md  docker-compose.yml
performance/lib/: config.js
performance/results/: rust-federation-depth-load.json  rust-graphql-queries-load.json  rust-graphql-queries.json  rust-mixed-workload-load.json  rust-rest-crud-load.json  rust-rest-crud.json
