[workspace]
members = [
    "meshql-core",
    "meshql-mongo",
    "meshql-graphlette",
    "meshql-restlette",
    "meshql-server",
    "meshql-cert",
    "meshql-merkql",
    "meshql-sqlite",
    "meshql-postgres",
    "meshql-mysql",
    "examples/farm",
    "examples/egg-economy",
    "examples/egg-economy-sap",
    "examples/egg-economy-salesforce",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
handlebars = "6"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
