[package]
name = "meshql-graphlette"
version = "0.1.0"
edition = "2021"

[dependencies]
meshql-core = { path = "../meshql-core" }
async-graphql = { version = "7", features = ["dynamic-schema"] }
async-graphql-parser = "7"
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
url = "2"
