[package]
name = "meshql-ksql"
version = "0.1.0"
edition = "2021"

[dependencies]
meshql-core = { path = "../meshql-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
handlebars = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
tracing = "0.1"
anyhow = "1"

[dev-dependencies]
meshql-cert = { path = "../meshql-cert" }
cucumber = "0.21"
tokio = { workspace = true }

[[test]]
name = "repo_cert"
harness = false

[[test]]
name = "searcher_cert"
harness = false
