[package]
name = "meshql-server"
version = "0.1.0"
edition = "2021"

[dependencies]
meshql-core = { path = "../meshql-core" }
meshql-graphlette = { path = "../meshql-graphlette" }
meshql-restlette = { path = "../meshql-restlette" }
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
anyhow = "1"
