[package]
name = "farm-azure"
version = "0.1.0"
edition = "2021"

[dependencies]
meshql-core = { path = "../../meshql-core" }
meshql-merkql = { path = "../../meshql-merkql" }
meshql-graphlette = { path = "../../meshql-graphlette" }
meshql-restlette = { path = "../../meshql-restlette" }
meshql-server = { path = "../../meshql-server" }
merkql = { path = "../../../merkql" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
