[package]
name = "meshql-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
meshql-core = { path = "../meshql-core" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
handlebars = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }

[[test]]
name = "repo_cert"
harness = true

[[test]]
name = "searcher_cert"
harness = true
